ispCP ω 1.0.1 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-05-19 Benedikt Heintel
	- CONFIGS:
		* Fixed #1852: Add "AuthOrder" to the proftpd.conf
	- TOOLS:
		* Fixed #1838: Updated Squirrelmail to version 1.4.18
		* Fixed #1850: Updated phpMyAdmin to version 3.1.5

2009-05-15 Daniel Andreca
	- GUI:
		* Fixed #1839: Part of DNS JS delete message has undefined var in client/domains_manage.php
		* Fixed #1840: Variable {ID} not parsed in client/dns_add.php anytime

2009-05-14 Malte Geierhos
	- ENGINE:
		* Fixed #1843: Missing Alias for Awstats static icons
		* Fixed #1844: outdated Centos Packages (thanks to Laurence Alfred Barlow)

2009-05-13 Benedikt Heintel
	- GUI:
		* Fixed #1776: translate foreign language comments
		* Fixed #1812: order e-mail misses link url to admin panel

2009-05-13 Malte Geierhos
	- ENGINE:
		* Fixed #1841: (wrong package name in centos packagelist)
		* Fixed #1842: BASE_SERVER_VHOST_PREFIX missing in dmn_entry.tpl

2009-05-12 Daniel Andreca
	- GUI:
		* Fixed #1837: admin/ip_manage.php error

2009-05-03 Daniel Andreca
	- CONFIGS:
		* Repaired support for Ubuntu
	- GUI:
		* Improve ip management
		* Fixed #1826: Alias Subdomains aren't deleted from DB
		* Fixed #1820: Email forward validation missing

2009-05-07 Thomas Häber
	- LANGUAGES:
		* added (missing) translation strings
		* fixed translations for e-mails with {BASE_SERVER_VHOST_PREFIX}
	- GUI:
		* code cleanup (some refactoring, coding style ...)
		* added hint about {BASE_SERVER_VHOST_PREFIX} in table header
		* added Zend as external repository into include library of ispCP GUI

2009-05-07 Benedikt Heintel
	- LANGUAGES:
		* Upated: Catalan
		* Update: Portugese (Brazil)

2009-05-03 Daniel Andreca
	- ENGINE:
		* Added Feature: DNS management support. - thanks to Blondak
		* Fixed #1814: r1725 raises regression
		* One more fix to ticket #1499: Where am i?
	- GUI:
		* Fixed Double encoding in logs

2009-05-02 Daniel Andreca
	- ENGINE: