@@ -1,0 +1,88 @@
+#
+# ispCP ω (OMEGA) a Virtual Hosting Control System
+#
+# @copyright	2001-2006 by moleSoftware GmbH
+# @copyright	2006-2009 by ispCP | http://isp-control.net
+# @version		SVN: $Id$
+# @link			http://isp-control.net
+# @author		ispCP Team
+#
+# @license
+#   This program is free software; you can redistribute it and/or modify it under
+#   the terms of the MPL General Public License as published by the Free Software
+#   Foundation; either version 1.1 of the License, or (at your option) any later
+#   version.
+#   You should have received a copy of the MPL Mozilla Public License along with
+#   this program; if not, write to the Open Source Initiative (OSI)
+#   http://opensource.org | osi@opensource.org
+#
+################################################################################
+#
+# SSL Master Begin
+#
+
+<VirtualHost {BASE_SERVER_IP}:443>
+
+    ServerAdmin     {DEFAULT_ADMIN_ADDRESS}
+    DocumentRoot    {ROOT_DIR}/gui
+
+    ServerName      {BASE_SERVER_VHOST}
+
+    Alias /errors   {ROOT_DIR}/gui/errordocs/
+
+    ErrorDocument 401 /errors/401.html
+    ErrorDocument 403 /errors/403.html
+    ErrorDocument 404 /errors/404.html
+    ErrorDocument 500 /errors/500.html
+    ErrorDocument 503 /errors/503.html
+
+    Alias /pma      {ROOT_DIR}/gui/tools/pma/
+    Alias /webmail  {ROOT_DIR}/gui/tools/webmail/
+    Alias /ftp      {ROOT_DIR}/gui/tools/filemanager/
+
+    <IfModule suexec_module>
+           SuexecUserGroup {APACHE_SUEXEC_USER_PREF}{APACHE_SUEXEC_MIN_UID} {APACHE_SUEXEC_USER_PREF}{APACHE_SUEXEC_MIN_GID}
+    </IfModule>
+
+    <Directory {ROOT_DIR}/gui>
+        Options -Indexes Includes FollowSymLinks MultiViews
+        AllowOverride None
+        Order allow,deny
+        Allow from all
+    </Directory>
+
+    <IfModule mod_fcgid.c>
+        <Directory {ROOT_DIR}/gui>
+            FCGIWrapper {PHP_STARTER_DIR}/master/php{PHP_VERSION}-fcgi-starter .php
+            Options +ExecCGI
+        </Directory>
+        <Directory "{PHP_STARTER_DIR}/master">
+            AllowOverride None
+            Options +ExecCGI MultiViews -Indexes
+            Order allow,deny
+            Allow from all
+        </Directory>
+    </IfModule>
+    <IfModule mod_fastcgi.c>
+        ScriptAlias /php5/ {PHP_STARTER_DIR}/master/
+        <Directory "{PHP_STARTER_DIR}/master">
+            AllowOverride None
+            Options +ExecCGI MultiViews -Indexes
+            Order allow,deny
+            Allow from all
+        </Directory>
+    </IfModule>
+
+    <IfModule mod_php5.c>
+        <Directory {ROOT_DIR}/gui>
+            php_admin_value open_basedir "{WWW_DIR}/{DMN_NAME}/:{CONF_DIR}/:{MR_LOCK_FILE}:/proc/:/bin/df:/bin/mount:{RKHUNTER_LOG}:{CHKROOTKIT_LOG}:{PEAR_DIR}/{OTHER_ROOTKIT_LOG}"
+            php_admin_value session.save_path "{ROOT_DIR}/gui/phptmp/"
+            php_admin_value upload_tmp_dir "{ROOT_DIR}/gui/phptmp/"
+        </Directory>
+    </IfModule>
+
+</VirtualHost>
+
+#
+# SSL Master End
+#
