@@ -120,21 +120,14 @@ Make sure you are logged in as root and MySQL is running.
 ---------
 Make sure you are logged in as root and MySQL is running.
 
-1. If you upgrade from VHCS 2.4.7.1 or VHCS OMEGA 2.4.8 you must first install
-   ISPCP as described in INSTALL sections. Please note that ispCP Omega comes
-   with a new webmail client. Please make sure that your customers can still
-   access the address book data. You can ensure this either by making the old
-   webmail client accessable or by using this script:
-   http://www.isp-control.net/ispcp/ticket/1614.
-
-2. Untar or unzip the distribution files to a secure directory:
+1. Untar or unzip the distribution files to a secure directory:
 	# cd /root
 	# tar xjvf ispcp-omega-1.0.1.tar.bz2
 
-3. Change to the newly created directory:
+2. Change to the newly created directory:
 	# cd ./ispcp-omega-1.0.1
 
-4. Install the required modules
+3. Install the required modules
    first update your system:
 	# apt-get update && apt-get upgrade
 
@@ -164,46 +157,42 @@ Make sure you are logged in as root and MySQL is running.
 	(when you get to the proftpd screen, select 'standalone')
 	(when you get to the rootkithunter screen, select two time 'yes')
 
-5. (optional) Check the ispcp.conf and adapt it to your requirements.
-
-6. Stop the ispcp_deamon and build the System by using make:
+4. Stop the ispcp_deamon and build the System by using make:
 	# /etc/init.d/ispcp_daemon stop
 	# make install
 
-7. Save files
+5. Save files
 	# cp -v /var/www/ispcp/engine/ispcp-db-keys.pl /tmp/ispcp/var/www/ispcp/engine/
 	# cp -v /var/www/ispcp/engine/messager/ispcp-db-keys.pl /tmp/ispcp/var/www/ispcp/engine/messager/
 	# cp -v /var/www/ispcp/gui/include/ispcp-db-keys.php /tmp/ispcp/var/www/ispcp/gui/include/
 	# cp -v /var/www/ispcp/gui/themes/user_logos/* /tmp/ispcp/var/www/ispcp/gui/themes/user_logos/
 	# cp -TvR /var/www/ispcp/gui/domain_default_page /tmp/ispcp/var/www/ispcp/gui/domain_default_page
-
-   If updating from RC3 or higher:
 	# cp -v /var/www/ispcp/gui/tools/pma/config.inc.php /tmp/ispcp/var/www/ispcp/gui/tools/pma/
 
-8. Delete old files to avoid security risks:
+6. Delete old files to avoid security risks:
 	# rm -fR /var/www/ispcp/gui/{admin,client,include,orderpanel,themes,reseller}/
 	# rm -fR /var/www/ispcp/gui/*.php
 
-9. Copy /usr and /var directories into your system (you may make backups)
+7. Copy /usr and /var directories into your system (you may make backups)
 	# cp -Rv /tmp/ispcp/usr/* /usr/
 	# cp -Rv /tmp/ispcp/var/* /var/
 
-10. Backup ispcp.conf and copy the /etc directory into your system (you may make backups):
+8. Backup ispcp.conf and copy the /etc directory into your system (you may make backups):
 	# mv -v /etc/ispcp/ispcp.conf /etc/ispcp/ispcp.old.conf
 	# cp -Rv /tmp/ispcp/etc/* /etc/
 
-11. Now it's time to update your installation. Change into the engine directory:
+9. Now it's time to update your installation. Change into the engine directory:
 	# cd /var/www/ispcp/engine/setup
 
-12. Start the engine update:
+10. Start the engine update:
 	# perl ispcp-update
 
-13. Update ispCP ω step-by-step
+11. Update ispCP ω step-by-step
 
 	If you get no error, all went good; if you get one, look at
 	http://isp-control.net to solve the problem.
 
-14. Clean the temporary folders:
+12. Clean the temporary folders:
 	# rm -fR /tmp/ispcp/
 
 ================================================================================
@@ -217,7 +206,7 @@ Make sure you are logged in as root and MySQL is running.
 2. Start the uninstall script:
 	# perl ispcp-uninstall
 
-3. Clean up ur system
+3. Clean up your system
 
 ================================================================================
 7) Credits
